added latest security configs